# CPFin

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  gen.py  timeseries speed tests.numbers
.github/workflows/: ci.yml
examples/: CMakeLists.txt  Makefile  README.md  basic.cpp  overlays.cpp  plots.cpp  timeseries.cpp
src/: averages.cpp  bollinger.cpp  example.cpp  ohclrecord.cpp  priceseries.cpp  print_utils.cpp  returns.cpp  rsi.cpp  series.cpp  time_utils.cpp  timeseries.cpp
src/include/: averages.hpp  bollinger.hpp  enums.hpp  example.hpp  matplotlibcpp.h  ohclrecord.hpp  priceseries.hpp  print_utils.hpp  returns.hpp  rsi.hpp  series.hpp  time_utils.hpp  timeseries.hpp  types.hpp
src/include/overlays/: bollinger.hpp  ema.hpp  ioverlay.hpp  macd.hpp  overlays.hpp  rsi.hpp  sma.hpp
src/include/timeseries/: ar.hpp  arma.hpp  ma.hpp  time_series_model.hpp  timeseries_models.hpp
src/overlays/: bollinger.cpp  ema.cpp  ioverlay.cpp  macd.cpp  overlays.cpp  rsi.cpp  sma.cpp
src/timeseries/: ar.cpp  arma.cpp  ma.cpp
test/: CMakeLists.txt  README.md  bollinger_test.cpp  ema_test.cpp  macd_test.cpp  more_test.cpp  priceseries_test.cpp  rsi_test.cpp  sma_test.cpp
test/benchmarks/: ar.py  read.py  timeseries_test.cpp  write.py
